day 6 solutions and some optimizations